--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "build": "cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" webpack --env env=dev"
+    "build": "cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" webpack --env env=dev",
+    "build:prod": "cross-env TS_NODE_PROJECT=\"tsconfig.webpack.json\" webpack --env env=prod",
+    "watch": "npm run build -- --watch"
   },
   "dependencies": {
     "@angular/common": "^11.2.5",
@@ -28,13 +30,19 @@
   },
   "devDependencies": {
     "@angular/cli": "^11.2.4",
+    "@types/compression-webpack-plugin": "^6.0.4",
+    "@types/mini-css-extract-plugin": "^1.2.2",
     "@types/node": "^14.14.33",
+    "@types/terser-webpack-plugin": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
+    "compression-webpack-plugin": "^7.1.2",
     "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-webpack-plugin": "^2.5.2"
+    "eslint-webpack-plugin": "^2.5.2",
+    "mini-css-extract-plugin": "^1.3.9",
+    "terser-webpack-plugin": "^5.1.1"
   },
   "name": "angular-webpack-starter",
   "version": "1.0.0",
