--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@types/terser-webpack-plugin": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
+    "angular2-template-loader": "^0.6.2",
     "compression-webpack-plugin": "^7.1.2",
     "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-webpack-plugin": "^2.5.2",
+    "html-loader": "^0.5.5",
     "mini-css-extract-plugin": "^1.3.9",
     "terser-webpack-plugin": "^5.1.1"
   },
