--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@angular/platform-browser": "^11.2.5",
     "@angular/platform-browser-dynamic": "^11.2.5",
     "@angular/router": "^11.2.5",
+    "@angular/service-worker": "^11.2.5",
+    "@ngneat/until-destroy": "^8.0.4",
     "@types/webpack": "^4.41.26",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.9.1",
@@ -29,8 +31,11 @@
     "zone.js": "^0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.901.6",
     "@angular/cli": "^11.2.4",
+    "@angular/language-service": "^11.2.5",
     "@types/compression-webpack-plugin": "^6.0.4",
+    "@types/jest": "^26.0.20",
     "@types/mini-css-extract-plugin": "^1.2.2",
     "@types/node": "^14.14.33",
     "@types/terser-webpack-plugin": "^5.0.2",
