--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,38 +1,43 @@
 {
-    "compileOnSave": false,
-    "compilerOptions": {
-      "esModuleInterop": true,
-      "outDir": "./dist/out-tsc",
-      "sourceMap": true,
-      "declaration": false,
-      "module": "es2020",
-      "moduleResolution": "node",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "importHelpers": true,
-      "noImplicitAny": true,
-      "suppressImplicitAnyIndexErrors": true,
-      "target": "es2015",
-      "typeRoots": [
-        "node_modules/@types"
-      ],
-      "lib": [
-        "es2018",
-        "dom"
-      ],
-      "baseUrl": "./",
-      "paths": {
-        "@app/*": ["src/app/*"],
-        "@core": ["src/app/@core"],
-        "@core/*": ["src/app/@core/*"],
-        "@shared": ["src/app/@shared"],
-        "@shared/*": ["src/app/@shared/*"],
-        "@env/*": ["src/environments/*"]
-      }
-    },
-    "angularCompilerOptions": {
-      "fullTemplateTypeCheck": true,
-      "strictInjectionParameters": true,
-      "preserveWhitespaces": true
+  "compileOnSave": false,
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "outDir": "./dist/out-tsc",
+    "sourceMap": true,
+    "declaration": false,
+    "module": "es2020",
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "importHelpers": true,
+    "noImplicitAny": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "target": "es2015",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2018",
+      "dom"
+    ],
+    "baseUrl": "./",
+    "paths": {
+      "@app/*": ["src/app/*"],
+      "@core": ["src/app/@core"],
+      "@core/*": ["src/app/@core/*"],
+      "@shared": ["src/app/@shared"],
+      "@shared/*": ["src/app/@shared/*"],
+      "@env/*": ["src/environments/*"]
     }
-  }
+  },
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true,
+    "preserveWhitespaces": true,
+    "strictTemplates": true,
+    "enableIvy": false
+  },
+  "plugins": [
+    {"name": "@angular/language-service"}
+  ]
+}
