--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@angular/service-worker": "^11.2.5",
     "@ngneat/until-destroy": "^8.0.4",
     "@types/webpack": "^4.41.26",
+    "autoprefixer": "^10.2.5",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.9.1",
     "cross-env": "^7.0.3",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
+    "postcss": "^8.2.8",
     "rxjs": "^6.6.6",
+    "tailwindcss": "^2.0.3",
     "ts-loader": "^8.0.17",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
@@ -43,12 +46,16 @@
     "@typescript-eslint/parser": "^4.17.0",
     "angular2-template-loader": "^0.6.2",
     "compression-webpack-plugin": "^7.1.2",
+    "css-loader": "^5.1.2",
     "eslint-import-resolver-webpack": "^0.13.0",
     "eslint-plugin-html": "^6.1.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-webpack-plugin": "^2.5.2",
     "html-loader": "^0.5.5",
     "mini-css-extract-plugin": "^1.3.9",
+    "postcss-import": "^14.0.0",
+    "postcss-loader": "^5.2.0",
+    "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1"
   },
   "name": "angular-webpack-starter",
