--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-webpack-plugin": "^2.5.2",
     "html-loader": "^0.5.5",
+    "htmlhint": "^0.14.2",
     "mini-css-extract-plugin": "^1.3.9",
     "postcss-import": "^14.0.0",
     "postcss-loader": "^5.2.0",
